# octopus

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
.github/workflows/: ci.yml
cli/: README.md  __init__.py  __main__.py  client.py  output.py  parser.py
cli/commands/: __init__.py  activity.py  agent.py  approval.py  asset.py  chat.py  cost.py  goal.py  heartbeat.py  issue.py  messenger.py  organization.py  project.py  run_intelligence.py  runtime_provider.py
cli/tests/: test_activity_commands.py  test_agent_commands.py  test_approval_commands.py  test_asset_commands.py  test_chat_commands.py  test_client.py  test_cost_commands.py  test_goal_commands.py  test_heartbeat_commands.py  test_issue_commands.py  test_messenger_commands.py  test_organization_commands.py  test_project_commands.py  test_runtime_provider_commands.py
docker/: Dockerfile  build.sh
docs/: DESIGN.md  FEATURE.md
docs/01-phase/: API-COMPATIBILITY.md  BASELINE-CLEANUP.md  SCHEMA-COMPATIBILITY.md
docs/02-phase/: SERVER-SKELETON.md  WORKFLOW-NOTES.md
docs/03-phase/: README.md
docs/04-phase/: README.md
docs/05-phase/: README.md
docs/06-phase/: README.md
docs/07-phase/: README.md
docs/08-phase/: README.md
docs/09-phase/: README.md
docs/10-phase/: README.md
docs/analyze/: agent-runtime-bugs.md  claude-local-db-provider-design.md  closeout-governance-design.zh-CN.md  codex-local-db-provider-design.md  runtime-execution-flow.md  server-control-plane.md
docs/guides/: closeout-governance.md  heartbeat-scheduler.md  issue-run-status-linkage.md  openclaw-gateway-implementation.md  opencode-provider-models.md  runtime-provider-model-design.md  skills.md  storage.md  task-execution-lifecycle.md  task-invocation-modes.md  task-queue.md
docs/step-01/: BASELINE-CLEANUP.md  README.md
docs/step-01-base/: TASK.md
docs/step-02/: README.md  SERVER-SKELETON.md
docs/step-02-server/: TASK.md
docs/step-03/: A-CONSTRAINTS.md  API-COMPATIBILITY.md  README.md  SHARED-CONTRACT-DRAFT.md  SHARED-CONTRACT.md
docs/step-03-contract/: TASK.md
docs/step-04/: A-CONSTRAINTS.md  DATABASE-MAPPING-DRAFT.md  DATABASE-MAPPING.md  README.md  SCHEMA-COMPATIBILITY.md  SCHEMA-UPSTREAM-ALIGN.md
docs/step-04-db/: TASK.md
docs/step-05/: A-CONSTRAINTS.md  OWNERSHIP-DRAFT.md  OWNERSHIP.md  README.md
docs/step-05-scope/: TASK.md
docs/step-06/: A-CONSTRAINTS.md  READ-API-DRAFT.md  READ-API.md  README.md
docs/step-06-orgs/: TASK.md
docs/step-07/: A-CONSTRAINTS.md  B-PLAN.md  B-SPEC.md  MUTATION-WORKFLOW-DRAFT.md  ORGANIZATION-MANAGEMENT.md  README.md  WORKFLOW-NOTES.md
docs/step-07-issues/: TASK.md
docs/step-08/: A-CONSTRAINTS.md  B-SPEC.md  C-PLAN.md  README.md  RUNTIME-ORCHESTRATION-DRAFT.md
docs/step-08-review/: TASK.md
docs/step-09/: A-CONSTRAINTS.md  B-SPEC.md  C-PLAN.md  CHAT-COMPATIBILITY-DRAFT.md  README.md
docs/step-09-approvals/: TASK.md
docs/step-10/: A-CONSTRAINTS.md  HARDENING-DRAFT.md  README.md
docs/step-10-projects/: TASK.md
docs/step-11/: A-CONSTRAINTS.md
docs/step-11-agents/: TASK.md
docs/step-11-goals/: TASK.md
docs/step-12/: A-CONSTRAINTS.md
docs/step-12-agents/: TASK.md
docs/step-12-goals/: TASK.md
docs/step-13/: A-CONSTRAINTS.md
docs/step-13-runs/: TASK.md
scripts/: dev.ps1
server/: __init__.py  __main__.py  app.py  app_logging.py  config.py  lifespan.py
tests/: conftest.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+448 files in other folders)
