[project]
name = "octopus"
version = "0.1.0"
description = "Octopus: Python compatibility rewrite of the Rudder server"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.28",
    "psutil>=6.0",
    "python-ulid>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "types-pyyaml>=6.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 真启动子进程 / 访问外部服务的集成测试(--integration 才跑)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
