[project]
name = "octopus"
version = "0.1.0"
description = "Octopus: Python compatibility rewrite of the upstream control-plane server"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.28",
    "psutil>=6.0",
    "python-ulid>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "python-multipart>=0.0.20",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "packages"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "types-pyyaml>=6.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 真启动子进程 / 访问外部服务的集成测试(--integration 才跑)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
exclude = [
    "upstream-reference",
    "server/skills",
    "**/__pycache__",
    ".venv",
    ".uv-cache*",
]
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"

[tool.ruff]
extend-exclude = ["server/skills"]
